[gd_scene load_steps=5 format=3 uid="uid://itb1ysowaj3i"]

[ext_resource type="Script" path="res://scripts/DialogueScene.gd" id="1_8s825"]
[ext_resource type="Texture2D" uid="uid://cadmv3b6b2dsb" path="res://assets/portraits/rambo_port.png" id="2_mpb0j"]
[ext_resource type="FontFile" uid="uid://csnhk3q4gx0" path="res://assets/fonts/magofonts/mago1.ttf" id="3_1tlr2"]
[ext_resource type="FontFile" uid="uid://buw362wjb8o8d" path="res://assets/fonts/magofonts/mago2.ttf" id="4_f640f"]

[node name="DialogueScene" type="Control"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 31.0
offset_right = 31.0
grow_vertical = 2
script = ExtResource("1_8s825")

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogueBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CharacterRow" type="HBoxContainer" parent="DialogueBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Portrait" type="TextureRect" parent="DialogueBox/CharacterRow"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_mpb0j")

[node name="Text" type="RichTextLabel" parent="DialogueBox/CharacterRow"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_1tlr2")
theme_override_font_sizes/normal_font_size = 32

[node name="Speaker" type="RichTextLabel" parent="DialogueBox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_f640f")
theme_override_font_sizes/normal_font_size = 32

[node name="Button" type="Button" parent="DialogueBox"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("4_f640f")
theme_override_font_sizes/font_size = 32
text = "Next"

[node name="TypingTimer" type="Timer" parent="."]
